# mainkode

./: .gitignore  .user.yml  Makefile  README.md  entrypoint.sh  env.example  pyproject.toml  setup_snowflake_connection.sql  setup_temp_user.sql
.github/: dbt_env_notes.md  pull_request_template.md
.github/issue_template/: Data: Cleanup Old Tech.md  Data: Full DBT Refresh.md  Data: Full Source Refresh.md  Platform: Quarterly Data Health and Security Audit.md  Team: Data Offboarding.md  Team: Data Onboarding.md  Team: Intern Guide.md  Triage: Data Triage.md  Triage: Errors AE.md  Triage: Errors DE.md  [New Request] Create Standard Data Team Issue.md  [New Request] New Data Source.md  [Report] Data Quality Problem.md  [Report] Incident Template.md
.github/pull_request_template/: Driveload Changes.md  Pump Changes.md  Snowflake Permissions Update.md  dbt Workspace Changes.md  dbt-model-changes.md  python_changes.md  snowflake_provisioning.md
.github/workflows/: ci-lint.yml  dbt-deploy.yml  dbt-slim.yml
admin/: onboarding_script.zsh  sample_profiles.yml
airflow/dags/mainkode_dags/: README.md  airflow_utils.py  kube_secrets.py
airflow/dags/mainkode_dags/general/: __init__.py  backup_manifest.yaml  dbt_backups.py  snowflake_cleanup.py  snowflake_permissions.py
airflow/dags/mainkode_dags/transformation/: dbt.py
extract/: extract-ci.yml
load/miscellaneous/manual_json/: upload.py
orchestration/: dbt_gen_model_yml.sh  dbt_gen_source.sh  dbt_gen_staging_model.sh
permissions/snowflake/: roles.yml  snowflake_users.yml
pump/: README.md  pumps.py  pumps.yml
transform/: README.md
transform/mainkode_analytics/: Makefile  README.md  dbt_project.yml  package-lock.yml  packages.yml
transform/mainkode_analytics/macros/: log_dbt_results.sql
transform/mainkode_analytics/models/dbt_results/: dbt_results.sql
transform/mainkode_analytics/models/marts/finance/: _finance__models.yml  _profitability_finance__docs.md  fact_profitability.sql
transform/mainkode_analytics/models/staging/facebook_ads/: _facebook_ads__models.yml  _facebook_ads__sources.yml  stg_facebook_ads__insights_country.sql
transform/mainkode_analytics/models/staging/fedex/: _fedex__models.yml  _fedex__sources.yml  stg_fedex__shipping_cost.sql
transform/mainkode_analytics/models/staging/gsheet/: _gsheet__models.yml  _gsheet__sources.yml  stg_gsheet__eu_vat_rates.sql  stg_gsheet__sku_list_cost.sql
transform/mainkode_analytics/models/staging/shopify/: _shopify__models.yml  _shopify__sources.yml  stg_shopify__balance_transactions.sql  stg_shopify__customers.sql  stg_shopify__fulfillments.sql  stg_shopify__orderlineitems.sql  stg_shopify__orders.sql  stg_shopify__products.sql  stg_shopify__transactions.sql
transform/mainkode_analytics/models/staging/spring/: _spring__models.yml  _spring__sources.yml  stg_spring__shipping_cost.sql
transform/mainkode_analytics/profiles/: .user.yml  profiles.yml
transform/mainkode_analytics/tests/: test.yml
utils/api/: base_api.py
utils/aws/: s3_manager.py
utils/db/: snowflake_cli_helper.py  snowflake_manager.py
